<resources>
    <string name="app_name">multiple_activities</string>
    <string name="Username">Enter Username</string>
    <string name="Password">Enter Password</string>"
    <string name="Login">Login</string>
    <string name="A2_heading">Enter Your Preferences</string>
    <string name="A2_submitButton">Submit</string>
    <string name="Age_Input">Enter Age: </string>
    <string name="Gender_Input">Select Gender: </string>
    <string name="Hobbies_input">Select Hobbies: </string>
    <string name="female_gender">Female</string>
    <string name="male_gender">Male</string>
    <string name="gaming_hobby">Gaming</string>
    <string name="coding_hobby">Coding</string>
    <string name="sleeping_hobby">Sleeping</string>
    <string name="reading_hobby">Reading</string>
    <string name="sampleValue">xx</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="user_info">User Info</string>
</resources>